--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,12 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardview_id"
     android:layout_width="match_parent"
-    android:layout_height="180dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+
+    >
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFF1F1"
+
+        >
 
         <ImageView
             android:id="@+id/imageView_id"
@@ -25,11 +31,19 @@
 
         <TextView
             android:id="@+id/textView_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="203dp"
+            android:layout_height="131dp"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+
+            android:gravity="center"
             android:text="TextView"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="14sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView_id"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView_id"
             app:layout_constraintTop_toTopOf="@+id/imageView_id" />
     </androidx.constraintlayout.widget.ConstraintLayout>
